# videoJuegoCplusPlus

./: AGENTS.md  CMakeLists.txt  Prompt Para Inicializar Proyectos Futuros.txt  README.md  comandobuild.txt  memory.md
.codex/skills/bullet-pattern-designer/: SKILL.md
.codex/skills/pixel-art-generation-pipeline/: SKILL.md
.codex/skills/pixel-art-shmup-style/: SKILL.md
.codex/skills/pixel-perfect-grid/: SKILL.md
.codex/skills/sfml-architecture/: SKILL.md
.codex/skills/sfml-shmup-architecture/: SKILL.md
assets/textures/background/: earth_like_planet_horizon_spec.md  floating_red_rocks_tileset_spec.md
config/: background_elements.json  bullet_patterns.json  bullet_patterns_reference.md  enemies.json  items.json  movement_patterns.json  movement_patterns_reference.md  player.json  player_config_reference.md  player_lock_on.json  projectiles.json  stage_01.json  stage_01_background_elements.json  stage_01_checkpoint.json  stage_01_enemies copy.json  stage_01_enemies.json  stage_01_enemies_respaldo.json  stage_01_items.json  wall_bosses.json
src/: ARCHITECTURE.md  AssetManager.hpp  BackgroundElement.cpp  BackgroundElementDirector.hpp  BulletPatternSystem.cpp  BulletPatternSystem.hpp  Enemy.cpp  Enemy.hpp  EnemyBullet.cpp  EnemyBullet.hpp  EnemyConfigSystem.cpp  EnemyConfigSystem.hpp  EnemyLaser.hpp  Explosion.cpp  Game.cpp  Game.hpp  LaserNormal.cpp  LaserNormal.hpp  MovementPatternSystem.hpp  Player.cpp  Player.hpp  ProjectileConfigSystem.cpp  StageDirector.cpp  StageDirector.hpp  Starfield.cpp  Starfield.hpp  main.cpp
src/background/: Starfield.cpp  Starfield.hpp
src/config/: BackgroundElementConfigSystem.cpp  BackgroundElementConfigSystem.hpp  EnemyConfigSystem.cpp  EnemyConfigSystem.hpp  ItemConfigSystem.cpp  ItemConfigSystem.hpp  PlayerConfigSystem.cpp  PlayerConfigSystem.hpp  PlayerLockOnConfigSystem.cpp  PlayerLockOnConfigSystem.hpp  ProjectileConfigSystem.cpp  ProjectileConfigSystem.hpp  WallBossConfigSystem.cpp  WallBossConfigSystem.hpp
src/core/: AssetManager.cpp  Game.cpp  Game.hpp
src/entities/: BackgroundElement.cpp  BackgroundElement.hpp  Enemy.cpp  Enemy.hpp  EnemyBullet.cpp  EnemyBullet.hpp  EnemyLaser.cpp  EnemyLaser.hpp  Explosion.cpp  Explosion.hpp  ItemCarrier.cpp  ItemCarrier.hpp  LaserNormal.cpp  LaserNormal.hpp  Player.cpp  Player.hpp  PlayerHomingLaser.cpp  PlayerHomingLaser.hpp  PowerUpItem.cpp  PowerUpItem.hpp  WallBoss.cpp  WallBoss.hpp
src/states/: PlayState.cpp  PlayState.hpp
src/systems/: BackgroundElementDirector.cpp  BackgroundElementDirector.hpp  BulletPatternSystem.cpp  BulletPatternSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  EnemySpawner.cpp  EnemySpawner.hpp  EventQueue.cpp  EventQueue.hpp  MovementPatternSystem.cpp  MovementPatternSystem.hpp  StageCheckpointSystem.cpp  StageCheckpointSystem.hpp  StageDirector.cpp  StageDirector.hpp
tools/: create_player_sprites.py
(+15 files in other folders)
